# chat_server_rust

./: .clippy.toml  .dockerignore  .env.example  .env.production  .gitignore  Cargo.toml  DOCKER_DEPLOYMENT_COMPLETE.md  DOCKER_SUMMARY.md  Dockerfile  Makefile  Makefile.docker  QUICKSTART.Docker.md  README.Docker.md  README.md  clippy.toml  deny.toml  docker-compose.prod.yml  docker-compose.yml  progress.md  rust-toolchain.toml  rustfmt.toml
.claude/: settings.local.json
.claude/agents/: chat-server-architect.md  postgres-chat-architect.md  rust-chat-api-architect.md  rust-chat-server.md  rust-perf-optimizer.md  rust-security-architect.md  (+1 more)
.githooks/: commit-msg  pre-commit
.github/: ACTIVATION_CHECKLIST.md  CI_CD_BADGES.md  CI_CD_SETUP.md  CODEOWNERS  IMPLEMENTATION_SUMMARY.md  README.md  WORKFLOWS_QUICK_REFERENCE.md  WORKFLOW_DIAGRAM.md  dependabot.yml  pull_request_template.md
config/: prometheus.yml  redis.conf
docs/: 00-OVERVIEW.md  01-DATABASE-SCHEMA.md  02-API-SPECIFICATION.md  03-ARCHITECTURE-PATTERNS.md  04-WEBSOCKET-GATEWAY.md  05-SCALING-STRATEGY.md  06-SECURITY.md  07-DEVELOPMENT-GUIDE.md  ARCHITECTURE.md
migrations/: 20241217000001_create_users.sql  20241217000002_create_servers.sql  20241217000003_create_roles.sql  20241217000004_create_channels.sql  20241217000005_create_server_members.sql  20241217000006_create_member_roles.sql  20241217000007_create_messages.sql  20241217000008_create_message_reactions.sql  20241217000009_create_attachments.sql  20241217000010_create_invites.sql  20241217000011_create_channel_overwrites.sql  20241217000012_create_audit_logs.sql  20241217000013_create_user_sessions.sql  20241217000014_create_performance_indexes.sql  20241217000015_add_missing_columns.sql
scripts/: docker-build.sh  docker-deploy.sh  init-db.sql  seed-data.sql  setup.ps1  setup.sh  test-docker-setup.sh
src/: lib.rs  main.rs  startup.rs  telemetry.rs
tests/: integration_tests.rs
(+96 files in other folders)
