[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
authors = ["Chat Server Team"]
description = "A Discord-compatible chat server implemented in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/example/chat-server"
keywords = ["chat", "discord", "websocket", "real-time"]
categories = ["web-programming", "network-programming"]

[dependencies]
# Runtime & Framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "tls-rustls",
    "migrate",
] }

# Caching & Pub/Sub
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs & Time
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Hashing
sha2 = "0.10"

# Utilities
dashmap = "5.0"
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.18", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14"
mockall = "0.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
